--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -124,7 +124,7 @@ ndo
 - defluff 0.3.2 - http://j-o.users.sourceforge.net
 - Document Press Version 6.01 - http://encode.ru/threads/336-Document-Press-6-01
 - ECT 0.8.2 (50e32cde31e6) - https://github.com/fhanau/Efficient-Compression-Tool
-- ffmpeg 3.4.2 - http://ffmpeg.zeranoe.com/builds/
+- ffmpeg 4.0 - http://ffmpeg.zeranoe.com/builds/
 - FLAC 1.3.2 - https://xiph.org/flac/
 - FLACOUT 07/03/2014 - http://advsys.net/ken/utils.htm
 - Flasm 1.62 - http://flasm.sourceforge.net
@@ -171,6 +171,7 @@ X.XX - YYYY
 - Updated SQLite to 3.23.1 x86 and x64 Visual C++ 2017 custom builds.
 - Updated libwebp to 1.0.0 (Olav R. Birkeland).
 - Updated jpegoptim to 1.4.6 (custom built with libjpeg 9b).
+- Updated ffmpeg to 4.0.
 - Updated to mutool 1.13.
 - Updated pingo to 0.96z9 x86 and x64 versions.
 - Updated ImageMagick to 7.0.7.31 with HDRI support.
