--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -1,3 +1,5 @@
+- Consider deleting advpng.exe, pngout.exe, pngwolf.exe, and truepng.exe
+
 - Auto-Close option (SomeBody).
 
 - Move TruePNG at beggining: https://sourceforge.net/p/nikkhokkho/discussion/fileoptimizer/thread/956e7706/?limit=25
