--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -126,7 +126,7 @@ ndo
 - DeflOpt 2.07 - http://www.walbeehm.com/download/
 - defluff 0.3.2 - http://j-o.users.sourceforge.net
 - Document Press Version 6.01 - http://encode.ru/threads/336-Document-Press-6-01
-- ECT 0.8.2 (50e32cde31e6) - https://github.com/fhanau/Efficient-Compression-Tool
+- ECT 0.8.2 (b62da9a01560e626a8a1a9ebd78245f88dc81590) - https://github.com/fhanau/Efficient-Compression-Tool
 - ffmpeg 4.0 - http://ffmpeg.zeranoe.com/builds/
 - FLAC 1.3.2 - https://xiph.org/flac/
 - FLACOUT 07/03/2014 - http://advsys.net/ken/utils.htm
@@ -183,6 +183,7 @@ X.XX - YYYY
 - Updated ImageMagick to 7.0.7.37 with HDRI support.
 - Updated pingo to 0.97 x86 and x64 versions.
 - Updated pngquant to 2.12.0.
+- Updated ECT x86 binary to 0.8.2 b62da9a01560e626a8a1a9ebd78245f88dc81590. Thanks to landfillbaby.
 - Some minor optimizations and code cleanup.
 
 
