--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -170,6 +170,7 @@ ndo
 
 
 X.XX - YYYY
+- Removed --mt-deflate ECT switch because it is not available in latest build (Renard Voﬂ, #39).
 - Updated russian translation (Thanks Max).
 - Updated pingo to 0.97.1 x86 and x64 versions.
 - Updated ImageMagick to 7.0.8.3 with HDRI support.
