--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -174,7 +174,7 @@ X.XX - YYYY
 - Updated russian translation (Thanks Max).
 - Updated pingo to 0.97.1 x86 and x64 versions.
 - Updated ImageMagick to 7.0.8.3 with HDRI support.
-
+- Using IDE Fix Pack 6.3.1.
 
 
 
