--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -147,7 +147,7 @@ ndo
 - libwebp 1.0.0 - https://storage.googleapis.com/downloads.webmproject.org/releases/webp/index.html
 - m7zRepacker 1.0.32.319 - https://encode.ru/threads/1201-m7zRepacker
 - mkclean 0.8.10 - http://www.matroska.org/downloads/mkclean.html
-- mozjpeg 3.3.1 - https://github.com/mozilla/mozjpeg
+- mozjpeg 3.3.1 - https://github.com/garyzyg/mozjpeg-windows/
 - MP3packer 2.04 - http://omion.dyndns.org/mp3packer/mp3packer.html
 - mp4v2 2.1.0 - https://github.com/TechSmith/mp4v2
 - mutool 1.13 - http://mupdf.com/downloads/
@@ -175,6 +175,7 @@ X.XX - YYYY
 - Updated russian translation (Thanks Max).
 - Updated pingo to 0.97.1 x86 and x64 versions.
 - Updated ImageMagick to 7.0.8.3 with HDRI support.
+- Switched to official mozjpegtran builds.
 - Using IDE Fix Pack 6.3.1.
 
 
