--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -153,7 +153,7 @@ ndo
 - mutool 1.13 - http://mupdf.com/downloads/
 - OptiPNG 0.7.7 - http://optipng.sourceforge.net
 - PETrim 4.00 beta - http://pecompact.com/pesuite.php
-- pingo 0.97.1 - http://css-ig.net/pingo
+- pingo 0.97.4 - http://css-ig.net/pingo
 - PngOptimizer 2.5 - http://psydk.org/PngOptimizer
 - PNGOUT 02/13/2015 - http://advsys.net/ken/utils.htm
 - pngquant 2.12.0 - http://www.pngquant.org
@@ -173,7 +173,8 @@ X.XX - YYYY
 - New StartupDelay=1000 INI setting from 1000ms to 29000ms specifying the delay before start adding files (cy_sfnet_2007).
 - Removed --mt-deflate ECT switch because it is not available in latest build (Renard Voﬂ, #39).
 - Updated russian translation (Thanks Max).
-- Updated pingo to 0.97.1 x86 and x64 versions.
+- Updated pingo to 0.97.4 x64 versions.
+- Updated pingo to 0.97.1 x86 versions.
 - Updated ImageMagick to 7.0.8.3 with HDRI support.
 - Switched to official mozjpegtran builds.
 - Using IDE Fix Pack 6.3.1.
