--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -169,6 +169,7 @@ ndo
 - zRecompress 2.12 - http://nikkhokkho.sourceforge.net/static.php?page=zRecompress
 
 
+
 X.XX - YYYY
 - New StartupDelay=1000 INI setting from 1000ms to 29000ms specifying the delay before start adding files (cy_sfnet_2007).
 - Removed --mt-deflate ECT switch because it is not available in latest build (Renard Voﬂ, #39).
@@ -177,6 +178,7 @@ X.XX - YYYY
 - Updated pingo to 0.97.1 x86 versions.
 - Updated ImageMagick to 7.0.8.3 with HDRI support.
 - Switched to official mozjpegtran builds.
+- Upgraded to C++ Builder Community Edition 10.2.3 (10.2.3.3231).
 - Using IDE Fix Pack 6.3.1.
 
 
