Fixed a resource leak while copying files using memory mapped views
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@1335 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -175,6 +175,7 @@ ndo
 X.XX - YYYY
 - New StartupDelay=1000 INI setting from 1000ms to 29000ms specifying the delay before start adding files (cy_sfnet_2007).
 - Removed --mt-deflate ECT switch because it is not available in latest build (Renard Voﬂ, #39).
+- Fixed a resource leak while copying files using memory mapped views.
 - Updated russian translation (Thanks Max).
 - Updated pingo to 0.97.4 x64 versions.
 - Updated pingo to 0.97.1 x86 versions.
@@ -182,7 +183,7 @@ X.XX - YYYY
 - Switched to official mozjpegtran builds.
 - Upgraded to C++ Builder Community Edition 10.2.3 (10.2.3.3231).
 - Using IDE Fix Pack 6.3.1.
-
+- Some minor optimizations and code cleanup.
 
 
 12.90 - 2018/06/19
