--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -126,7 +126,7 @@ ndo
 - defluff 0.3.2 - http://j-o.users.sourceforge.net
 - Document Press Version 6.01 - http://encode.ru/threads/336-Document-Press-6-01
 - ECT 0.8.2 (b62da9a01560e626a8a1a9ebd78245f88dc81590) - https://github.com/fhanau/Efficient-Compression-Tool
-- ffmpeg 4.0 - http://ffmpeg.zeranoe.com/builds/
+- ffmpeg 4.0.1 - http://ffmpeg.zeranoe.com/builds/
 - FLAC 1.3.2 - https://xiph.org/flac/
 - FLACOUT 07/03/2014 - http://advsys.net/ken/utils.htm
 - Flasm 1.62 - http://flasm.sourceforge.net
@@ -135,7 +135,7 @@ ndo
 - Ghostscript 9.23 - http://www.ghostscript.com
 - GNU Strip 2.30 - https://sourceforge.net/projects/mingw-w64/
 - Guetzli 1.0.1 - https://github.com/google/guetzli
-- ImageMagick 7.0.8.3 - http://www.imagemagick.org
+- ImageMagick 7.0.8.8 - http://www.imagemagick.org
 - ImageWorsener 1.3.2 - http://entropymine.com/imageworsener
 - jhead 3.00 - http://www.sentex.net/~mwandel/jhead/
 - jpeg-archive 2.1.1 - https://github.com/danielgtaylor/jpeg-archive
@@ -153,7 +153,7 @@ ndo
 - mutool 1.13 - http://mupdf.com/downloads/
 - OptiPNG 0.7.7 - http://optipng.sourceforge.net
 - PETrim 4.00 beta - http://pecompact.com/pesuite.php
-- pingo 0.97.4 - http://css-ig.net/pingo
+- pingo 0.97.6 - http://css-ig.net/pingo
 - PngOptimizer 2.5 - http://psydk.org/PngOptimizer
 - PNGOUT 02/13/2015 - http://advsys.net/ken/utils.htm
 - pngquant 2.12.0 - http://www.pngquant.org
@@ -171,7 +171,9 @@ ndo
 
 
 X.XX - YYYY
-
+- Updated ffmpeg to 4.0.1.
+- Updated pingo to 0.97.6 x64 version.
+- Updated ImageMagick to 7.0.8.8 with HDRI support.
 
 
 13.00 - 2018/07/24
@@ -179,8 +181,8 @@ X.XX - YYYY
 - Removed --mt-deflate ECT switch because it is not available in latest build (Renard Voﬂ, #39).
 - Fixed a resource leak while copying files using memory mapped views.
 - Updated russian translation (Thanks Max).
-- Updated pingo to 0.97.4 x64 versions.
-- Updated pingo to 0.97.1 x86 versions.
+- Updated pingo to 0.97.4 x64 version.
+- Updated pingo to 0.97.1 x86 version.
 - Updated ImageMagick to 7.0.8.3 with HDRI support.
 - Switched to official mozjpegtran builds.
 - Upgraded to C++ Builder Community Edition 10.2.3 (10.2.3.3231).
