--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -171,6 +171,7 @@ ndo
 
 
 X.XX - YYYY
+- Fixed installer shortcuts pointing to Pluings32 or Plugin64 folders instead of where FO was installed (James Pous).
 - Updated ffmpeg to 4.0.1.
 - Updated pingo to 0.97.6 x64 version.
 - Updated ImageMagick to 7.0.8.8 with HDRI support.
