Extensively debugged with CodeGuard Updated EXEs
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@1344 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -175,6 +175,7 @@ X.XX - YYYY
 - Updated ffmpeg to 4.0.1.
 - Updated pingo to 0.97.6 x64 version.
 - Updated ImageMagick to 7.0.8.8 with HDRI support.
+- Extensively debugged with CodeGuard.
 - Updated to cppcheck 1.84.
 - Some minor optimizations and code cleanup.
 
