User propper LCID
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@1350 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Languages/2052.po
+++ b/FileOptimizer/Languages/2052.po
@@ -1,24 +1,13 @@
-"Project-Id-Version: \n"
-"POT-Creation-Date: \n"
-"PO-Revision-Date: \n"
-"Last-Translator: \n"
-"Language-Team: \n"
-"MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
-"Language: zh_TW\n"
-"X-Generator: Poedit 2.0.6\n"
-
-# "Language ID: 4 (0x04)"
-# "Language Name: Chinese"
+# "Language ID: 2052 (0x804)"
+# "Language Name: Chinese Traditional"
 # "Project-Id-Version: FileOptimizer 12.40.2217"
-# "POT-Creation-Date: Feb 19 2018"
+# "POT-Creation-Date: Jun 08 2018"
 # "MIME-Version: 1.0"
 # "Content-Type: text/plain; charset=ISO-8859-1"
 # "Content-Transfer-Encoding: 8bit"
-# "Language: zh-CN"
-# "Last-Translator: Oliver HÃ¶now"
-# "Language-Team: Oliver HÃ¶now"
+# "Language: zh_CN"
+# "Last-Translator: Danfong Hsieh "
+# "Language-Team: Danfong Hsieh "
 # "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 msgid "&About..."
 msgstr "關於(&A)..."
