Integrated with Synopsys Coverity Scan
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@1351 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -173,6 +173,7 @@ ndo
 X.XX - YYYY
 - Updated chinese traditional translation. Thanks Danfong Hsieh.
 - Updated to mutool 1.14 gfe8b5f20.
+- Integrated with Synopsys Coverity Scan.
 
 
 13.10 - 2018/07/26
