--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -174,6 +174,7 @@ X.XX - YYYY
 - Updated chinese traditional translation. Thanks Danfong Hsieh.
 - Updated to mutool 1.14 gfe8b5f20.
 - Integrated with Synopsys Coverity Scan.
+- Some minor optimizations and code cleanup.
 
 
 13.10 - 2018/07/26
