Fixed "Miscelaneous" spelled as "Miscellaneous" in Options window and translations (JoeW)
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@1354 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -171,6 +171,7 @@ ndo
 
 
 X.XX - YYYY
+- Fixed "Miscelaneous" spelled as "Miscellaneous" in Options window and translations (JoeW).
 - Updated chinese traditional translation. Thanks Danfong Hsieh.
 - Updated mozjpegtran to 3.3.1-3 x86 and x64 binaries.
 - Updated to mutool 1.14 gfe8b5f20.
