--- a/FileOptimizer/Languages/10.po
+++ b/FileOptimizer/Languages/10.po
@@ -226,7 +226,7 @@ msgstr "&MP4"
 msgid "&MP3"
 msgstr "&MP3"
 
-msgid "&Miscelaneous"
+msgid "&Miscellaneous"
 msgstr "&Miscelaneo"
 
 msgid "&LUA"
