--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -171,6 +171,7 @@ ndo
 
 
 X.XX - YYYY
+- Fixed shntool introduce in 12.90 being inconsistent in file extension management, which could cause 0 byte optimized files (Peter S. #42).
 - Fixed "Miscelaneous" spelled as "Miscellaneous" in Options window and translations (JoeW).
 - Updated chinese traditional translation. Thanks Danfong Hsieh.
 - Updated mozjpegtran to 3.3.1-3 x86 and x64 binaries.
