--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -166,7 +166,7 @@ ndo
 - shntool 3.0.10 - http://www.etree.org/shnutils/shntool/
 - Tidy 5.6.0 - http://www.html-tidy.org
 - TruePNG 0.6.2.5 - http://x128.ho.ua/pngutils.html
-- UPX 3.94 - https://upx.github.io
+- UPX 3.95 - https://upx.github.io
 - ZLib 1.2.8 - http://www.zlib.net
 - zRecompress 2.12 - http://nikkhokkho.sourceforge.net/static.php?page=zRecompress
 
@@ -181,6 +181,7 @@ X.XX - YYYY
 - Updated ECT x86 and x64 binaries to ECT 0.8.3.47 (g4a45c139e86). Thanks to przemoc.
 - Updated mozjpegtran to 3.3.1-3 x86 and x64 binaries.
 - Updated to mutool 1.14 gfe8b5f20.
+- Updated UPX to 3.95.
 - Integrated with Synopsys Coverity Scan.
 - Some minor optimizations and code cleanup.
 
