--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -128,7 +128,7 @@ ndo
 - defluff 0.3.2 - http://j-o.users.sourceforge.net
 - Document Press Version 6.01 - http://encode.ru/threads/336-Document-Press-6-01
 - ECT 0.8.3.47 (g4a45c139e86) - https://github.com/fhanau/Efficient-Compression-Tool
-- ffmpeg 4.0.1 - http://ffmpeg.zeranoe.com/builds/
+- ffmpeg 4.0.2 - http://ffmpeg.zeranoe.com/builds/
 - FLAC 1.3.2 - https://xiph.org/flac/
 - FLACOUT 07/03/2014 - http://advsys.net/ken/utils.htm
 - Flasm 1.62 - http://flasm.sourceforge.net
@@ -137,7 +137,7 @@ ndo
 - Ghostscript 9.23 - http://www.ghostscript.com
 - GNU Strip 2.30 - https://sourceforge.net/projects/mingw-w64/
 - Guetzli 1.0.1 - https://github.com/google/guetzli
-- ImageMagick 7.0.8.8 - http://www.imagemagick.org
+- ImageMagick 7.0.8.11 - http://www.imagemagick.org
 - ImageWorsener 1.3.2 - http://entropymine.com/imageworsener
 - jhead 3.00 - http://www.sentex.net/~mwandel/jhead/
 - jpeg-archive 2.1.1 - https://github.com/danielgtaylor/jpeg-archive
@@ -151,11 +151,11 @@ ndo
 - mkclean 0.8.10 - http://www.matroska.org/downloads/mkclean.html
 - mozjpeg 3.3.1-3 - https://github.com/garyzyg/mozjpeg-windows/
 - MP3packer 2.04 - http://omion.dyndns.org/mp3packer/mp3packer.html
-- mp4v2 2.1.0 - https://github.com/TechSmith/mp4v2
+- mp4v2 4.0.1 - https://github.com/TechSmith/mp4v2
 - mutool 1.14 (gfe8b5f20) - http://mupdf.com/downloads/
 - OptiPNG 0.7.7 - http://optipng.sourceforge.net
 - PETrim 4.00 beta - http://pecompact.com/pesuite.php
-- pingo 0.97.6 - http://css-ig.net/pingo
+- pingo 0.98.9 - http://css-ig.net/pingo
 - PngOptimizer 2.5 - http://psydk.org/PngOptimizer
 - PNGOUT 02/13/2015 - http://advsys.net/ken/utils.htm
 - pngquant 2.12.0 - http://www.pngquant.org
@@ -180,6 +180,10 @@ X.XX - YYYY
 - Updated chinese traditional translation. Thanks Danfong Hsieh.
 - Updated Leanify to 0.4.3.218 daily binaries.
 - Updated ECT x86 and x64 binaries to ECT 0.8.3.47 (g4a45c139e86). Thanks to przemoc.
+- Updated mp4v2 x86 and x64 to 4.0.1 Visual C++ 2017 custom builds.
+- Updated ImageMagick to 7.0.8.11 with HDRI support.
+- Updated pingo to 0.98.9 x64 version.
+- Updated ffmpeg to 4.0.2.
 - Updated mozjpegtran to 3.3.1-3 x86 and x64 binaries.
 - Updated to mutool 1.14 gfe8b5f20.
 - Updated UPX to 3.95.
