--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -161,7 +161,7 @@ ndo
 - pngrewrite 1.4.0 - http://entropymine.com/jason/pngrewrite
 - pngwolf-zopli 1.1.2 - https://github.com/jibsen/pngwolf-zopfli
 - rehuff - http://wiki.xiph.org/Rehuff
-- SQLite 3.24.0 - http://www.sqlite.org
+- SQLite 3.25.0 - http://www.sqlite.org
 - shntool 3.0.10 - http://www.etree.org/shnutils/shntool/
 - Tidy 5.6.0 - http://www.html-tidy.org
 - TruePNG 0.6.2.5 - http://x128.ho.ua/pngutils.html
@@ -173,6 +173,7 @@ ndo
 
 X.XX - YYYY
 - Added flexiGIF for GIF toolchain.
+- Updated SQLite to 3.25.0 x86 and x64 Visual C++ 2017 custom builds.
 - Updated pingo to 0.98.16 x64 version.
 
 
