--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -136,7 +136,7 @@ ndo
 - Ghostscript 9.25 - http://www.ghostscript.com
 - GNU Strip 2.30 - https://sourceforge.net/projects/mingw-w64/
 - Guetzli 1.0.1 - https://github.com/google/guetzli
-- ImageMagick 7.0.8.11 - http://www.imagemagick.org
+- ImageMagick 7.0.8.12 - http://www.imagemagick.org
 - ImageWorsener 1.3.2 - http://entropymine.com/imageworsener
 - jhead 3.00 - http://www.sentex.net/~mwandel/jhead/
 - jpeg-archive 2.1.1 - https://github.com/danielgtaylor/jpeg-archive
@@ -175,6 +175,7 @@ X.XX - YYYY
 - Added flexiGIF for GIF toolchain.
 - Updated SQLite to 3.25.0 x86 and x64 Visual C++ 2017 custom builds.
 - Updated Ghostscript to 9.25.
+- Updated ImageMagick to 7.0.8.12 with HDRI support.
 - Updated pingo to 0.98.24 x64 version.
 
 
