--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -130,7 +130,7 @@ ndo
 - FLAC 1.3.2 - https://xiph.org/flac/
 - FLACOUT 07/03/2014 - http://advsys.net/ken/utils.htm
 - Flasm 1.62 - http://flasm.sourceforge.net
-- flexiGIF 2018.09a - https://create.stephan-brumme.com/flexigif-lossless-gif-lzw-optimization/
+- flexiGIF 2018.09b - https://create.stephan-brumme.com/flexigif-lossless-gif-lzw-optimization/
 - Gifsicle 1.91 - http://www.lcdf.org/gifsicle/
 - Gifsicle Lossy 1.91 - https://kornel.ski/lossygif
 - Ghostscript 9.25 - http://www.ghostscript.com
