git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@1390 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -1,3 +1,5 @@
+Restore archive FileAttribute not working (Roger, #46).
+
 1. Allow for a /NoWindow option. I currently enforce this within C# but the screen still flickers when a new instance of FileOptimizer launches. (It looks like windows starts it and then hides it ASAP). Devedse 
 
 2. Allow for an option to specify a custom log location. Devedse 
