--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -174,6 +174,7 @@ ndo
 
 
 X.XX - YYYY
+- Allowed window resizing to be 200x50 pixels (Roger #56).
 - Added flexiGIF for GIF toolchain.
 - Updated SQLite to 3.25.2 x86 and x64 Visual C++ 2017 custom builds.
 - Updated pingo to 0.98.31 x64 version.
