--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -174,6 +174,9 @@ ndo
 
 
 X.XX - YYYY
+
+
+13.30 - 2018/10/15
 - Allowed window resizing to be 200x50 pixels (Roger #56).
 - Added flexiGIF for GIF toolchain.
 - Updated SQLite to 3.25.2 x86 and x64 Visual C++ 2017 custom builds.
@@ -181,7 +184,7 @@ X.XX - YYYY
 - Updated Ghostscript to 9.25.
 - Updated ImageMagick to 7.0.8.12 with HDRI support.
 - Updated to mutool 1.14.
-
+- Some minor optimizations and code cleanup.
 
 13.20 - 2018/09/10
 - New HideInstructions=false INI setting to hide instructions pane on the top, and left more UI space available (Robert Berge).
