Fix code spell and update languages (Armin Müller)
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@1398 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Languages/10.po
+++ b/FileOptimizer/Languages/10.po
@@ -184,7 +184,7 @@ msgstr "&Saltar en capas"
 msgid "Skip processing of PDF files containing layered objects. Results in more compatible files with higher size."
 msgstr "Omite el procesamiento de archivos PDF que contienen objetos en capas. Resultados en más archivos compatibles con mayor tamaño."
 
-msgid "When custom profile is choosen, it allows you to specify a custom DPI for downsampling images"
+msgid "When custom profile is chosen, it allows you to specify a custom DPI for downsampling images"
 msgstr "Cuando se elige un perfil personalizado, le permite especificar un DPI personalizado para imágenes de baja resolución de muestreo"
 
 msgid "Compression profile, from less size, to best quality."
