--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -156,7 +156,7 @@ ndo
 - mutool 1.14 - http://mupdf.com/downloads/
 - OptiPNG 0.7.7 - http://optipng.sourceforge.net
 - PETrim 4.00 beta - http://pecompact.com/pesuite.php
-- pingo 0.98.31 - http://css-ig.net/pingo
+- pingo 0.98.35 - http://css-ig.net/pingo
 - PngOptimizer 2.5 - http://psydk.org/PngOptimizer
 - PNGOUT 02/13/2015 - http://advsys.net/ken/utils.htm
 - pngquant 2.12.0 - http://www.pngquant.org
@@ -175,6 +175,7 @@ ndo
 
 X.XX - YYYY
 - Updated flexiGIF to 2018.10a.
+- Updated pingo to 0.98.35 x64 version.
 - Updated Leanify to 0.4.3.222 daily binaries.
 - Some minor optimizations and code cleanup.
 
