Updated to cppcheck 1.85
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@1401 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -178,6 +178,7 @@ X.XX - YYYY
 - Updated pingo to 0.98.35 x64 version.
 - Updated Leanify to 0.4.3.222 daily binaries.
 - Some minor optimizations and code cleanup.
+- Updated to cppcheck 1.85.
 
 
 13.30 - 2018/10/15
