--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -174,6 +174,7 @@ ndo
 
 
 X.XX - YYYY
+- You can support FileOptimizer at Patreon (https://patreon.com/user?u=14590326).
 - Updated flexiGIF to 2018.10b (Edward Truong).
 - Updated ImageWorsener to 1.3.3.
 - Updated pingo to 0.98.35 x64 version.
