Removed ImageMagick from the ICO tool chain because it causes some lossy artifacts (Pepper Andrino)
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@1406 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -175,6 +175,7 @@ ndo
 
 X.XX - YYYY
 - You can support FileOptimizer at Patreon (https://patreon.com/user?u=14590326).
+- Removed ImageMagick from the ICO tool chain because it causes some lossy artifacts (Pepper Andrino).
 - Updated flexiGIF to 2018.10b (Edward Truong).
 - Updated ImageWorsener to 1.3.3.
 - Updated pingo to 0.98.35 x64 version.
