--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -174,6 +174,7 @@ ndo
 
 
 X.XX - YYYY
+- Added new INI setting Debug=false that keeps temporary files (Devedse #51).
 - You can support FileOptimizer at Patreon (https://patreon.com/user?u=14590326).
 - Removed -p switch in FlexiGIF because it is very slow (Edward Truong).
 - Removed ImageMagick from the ICO tool chain because it causes some lossy artifacts (Pepper Andrino).
