--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -156,14 +156,14 @@ ndo
 - mutool 1.14 - http://mupdf.com/downloads/
 - OptiPNG 0.7.7 - http://optipng.sourceforge.net
 - PETrim 4.00 beta - http://pecompact.com/pesuite.php
-- pingo 0.98.35 - http://css-ig.net/pingo
+- pingo 0.98.39 - http://css-ig.net/pingo
 - PngOptimizer 2.5 - http://psydk.org/PngOptimizer
 - PNGOUT 02/13/2015 - http://advsys.net/ken/utils.htm
 - pngquant 2.12.0 - http://www.pngquant.org
 - pngrewrite 1.4.0 - http://entropymine.com/jason/pngrewrite
 - pngwolf-zopli 1.1.2 - https://github.com/jibsen/pngwolf-zopfli
 - rehuff - http://wiki.xiph.org/Rehuff
-- SQLite 3.25.2 - http://www.sqlite.org
+- SQLite 3.25.3 - http://www.sqlite.org
 - shntool 3.0.10 - http://www.etree.org/shnutils/shntool/
 - Tidy 5.6.0 - http://www.html-tidy.org
 - TruePNG 0.6.2.5 - http://x128.ho.ua/pngutils.html
@@ -179,9 +179,10 @@ X.XX - YYYY
 - Removed -p switch in FlexiGIF because it is very slow (Edward Truong).
 - Removed ImageMagick from the ICO tool chain because it causes some lossy artifacts (Pepper Andrino).
 - Fixed TruePNG reducing bit-depth (Devedse #58).
+- Updated SQLite to 3.25.3 x86 and x64 Visual C++ 2017 custom builds.
 - Updated flexiGIF to 2018.10b (Edward Truong).
 - Updated ImageWorsener to 1.3.3.
-- Updated pingo to 0.98.35 x64 version.
+- Updated pingo to 0.98.39 x64 version.
 - Updated Leanify to 0.4.3.222 daily binaries.
 - Some minor optimizations and code cleanup.
 - Updated to cppcheck 1.85.
