--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -147,7 +147,7 @@ ndo
 - jsmin 2013-03-29 - http://www.crockford.com/javascript/jsmin.html
 - Leanify 0.4.3.222 - https://github.com/JayXon/Leanify (https://ci.appveyor.com/project/JayXon/leanify)
 - libdeflate 0.8 - https://github.com/ebiggers/libdeflate
-- libwebp 1.0.0 - https://storage.googleapis.com/downloads.webmproject.org/releases/webp/index.html
+- libwebp 1.0.1 RC2 - https://storage.googleapis.com/downloads.webmproject.org/releases/webp/index.html
 - m7zRepacker 1.0.32.319 - https://encode.ru/threads/1201-m7zRepacker
 - mkclean 0.8.10 - http://www.matroska.org/downloads/mkclean.html
 - mozjpeg 3.3.1-3 - https://github.com/garyzyg/mozjpeg-windows/
@@ -156,7 +156,7 @@ ndo
 - mutool 1.14 - http://mupdf.com/downloads/
 - OptiPNG 0.7.7 - http://optipng.sourceforge.net
 - PETrim 4.00 beta - http://pecompact.com/pesuite.php
-- pingo 0.98.39 - http://css-ig.net/pingo
+- pingo 0.98.40 - http://css-ig.net/pingo
 - PngOptimizer 2.5 - http://psydk.org/PngOptimizer
 - PNGOUT 02/13/2015 - http://advsys.net/ken/utils.htm
 - pngquant 2.12.0 - http://www.pngquant.org
@@ -179,10 +179,11 @@ X.XX - YYYY
 - Removed -p switch in FlexiGIF because it is very slow (Edward Truong).
 - Removed ImageMagick from the ICO tool chain because it causes some lossy artifacts (Pepper Andrino).
 - Fixed TruePNG reducing bit-depth (Devedse #58).
+- Updated libwebp to 1.0.1 RC2.
+- Updated pingo to 0.98.40 x64 version.
 - Updated SQLite to 3.25.3 x86 and x64 Visual C++ 2017 custom builds.
 - Updated flexiGIF to 2018.10b (Edward Truong).
 - Updated ImageWorsener to 1.3.3.
-- Updated pingo to 0.98.39 x64 version.
 - Updated Leanify to 0.4.3.222 daily binaries.
 - Some minor optimizations and code cleanup.
 - Updated to cppcheck 1.85.
