--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -174,6 +174,7 @@ ndo
 
 
 X.XX - YYYY
+- Fixed optimization of SWF files when new debug in 13.40 is enabled (avalanch).
 - Updated Leanify to 0.4.3.224 daily binaries.
 
 
