--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -174,6 +174,7 @@ ndo
 
 
 X.XX - YYYY
+- flexiGIF has been disabled due to corruption and inestability. Hope it could be reenabled soon.
 - Fixed optimization of SWF files when new debug in 13.40 is enabled (avalanch).
 - Updated flexiGIF to 2018.11a that fixes GIF corruptions (Aleksey Kuznetsov, Edward Truong).
 - Updated Leanify to 0.4.3.224 daily binaries.
