--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -183,6 +183,7 @@ X.XX - YYYY
 - Updated pingo to 0.98.41 x64 version.
 - Updated flexiGIF to 2018.11a that fixes GIF corruptions (Aleksey Kuznetsov, Edward Truong).
 - Updated Leanify to 0.4.3.224 daily binaries.
+- Updated to cppcheck 1.86.
 
 
 13.40 - 2018/11/16
