--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -154,7 +154,7 @@ ndo
 - mutool 1.14 - http://mupdf.com/downloads/
 - OptiPNG 0.7.7 - http://optipng.sourceforge.net
 - PETrim 4.00 beta - http://pecompact.com/pesuite.php
-- pingo 0.98.41 - http://css-ig.net/pingo
+- pingo 0.98.46 - http://css-ig.net/pingo
 - PngOptimizer 2.5 - http://psydk.org/PngOptimizer
 - PNGOUT 02/13/2015 - http://advsys.net/ken/utils.htm
 - pngquant 2.12.0 - http://www.pngquant.org
@@ -180,10 +180,11 @@ X.XX - YYYY
 - Updated ffmpeg to 4.1.0.
 - Updated Ghostscript to 9.26.
 - Updated libwebp to 1.0.1.
-- Updated pingo to 0.98.41 x64 version.
+- Updated pingo to 0.98.46 x64 version.
 - Updated flexiGIF to 2018.11a that fixes GIF corruptions (Aleksey Kuznetsov, Edward Truong).
 - Updated Leanify to 0.4.3.224 daily binaries.
 - Updated to cppcheck 1.86.
+- Some minor optimizations and code cleanup.
 
 
 13.40 - 2018/11/16
