--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -138,7 +138,7 @@ ndo
 - Guetzli 1.0.1 - https://github.com/google/guetzli
 - ImageMagick 7.0.8.15 - http://www.imagemagick.org
 - ImageWorsener 1.3.3 - http://entropymine.com/imageworsener
-- jhead 3.00 - http://www.sentex.net/~mwandel/jhead/
+- jhead 3.02 - http://www.sentex.net/~mwandel/jhead/
 - jpeg-archive 2.1.1 - https://github.com/danielgtaylor/jpeg-archive
 - jpegoptim 1.4.6 - http://www.kokkonen.net/tjko/projects.html
 - jpegtran 9b - http://jpegclub.org/jpegtran/
@@ -176,6 +176,7 @@ X.XX - YYYY
 - flexiGIF has been disabled due to corruption and inestability. Hope it could be reenabled soon.
 - Fixed optimization of SWF files when new debug in 13.40 is enabled (avalanch).
 - Updated SQLite to 3.26.0 x86 and x64 Visual C++ 2017 custom builds.
+- Updated to jHead 3.02.
 - Updated ImageMagick to 7.0.8.15 with HDRI support.
 - Updated ffmpeg to 4.1.0.
 - Updated Ghostscript to 9.26.
